# FastAuth

./: .dockerignore  .env.example  .gitignore  Dockerfile  create_client.py  create_scopes.py  docker-compose.yml  pyproject.toml  test_auth_code_flow.py
alembic/: env.py
alembic/versions/: 32ec3e726010_add_name_to_users.py  3c41a92a7aab_add_client_id_to_refresh_tokens.py  3e1060411bf7_create_clients_table.py  62af881006ee_create_users_table.py  9764b3cab4dd_create_authorization_codes_table.py  9d056ba9f866_add_family_id_and_is_used_to_refresh_.py  a8eb1437df3a_create_audit_logs_table.py  bd0e4d07c04d_create_refresh_tokens_table.py  dff51ac0a37a_create_scopes_table.py
app/: main.py
app/api/: dependencies.py  well_known.py
app/api/v1/: authorize.py  health.py  introspect.py  revoke.py  token.py  users.py
app/api/v1/admin/: audit_logs.py  clients.py  scopes.py  stats.py  users.py
app/core/: audit.py  config.py  jwt.py  rate_limit.py  redis.py
app/db/: session.py
app/models/: audit_log.py  authorization_code.py  client.py  refresh_token.py  scope.py  user.py
app/schemas/: token.py
app/services/: authorization_code.py  client.py  lockout.py  refresh_token.py  scope.py  user.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/context/: AdminContext.jsx  ThemeContext.jsx  UserContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AdminLoginPage.jsx  LoginPage.jsx  RegisterPage.jsx  UserDashboard.jsx
(+5 files in other folders)
