[project]
name = "fastauth"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "pydantic-settings==2.13.1",
    "sqlalchemy==2.0.41",
    "psycopg2-binary==2.9.10",
    "alembic==1.15.1",
    "argon2-cffi==23.1.0",
    "python-multipart>=0.0.22",
    "PyJWT==2.10.1",
    "cryptography==46.0.5",
]
